--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="div">
-	<h3>Simple calculator</h3>
+	<h3>Simple calculator !</h3>
 	<input type="number" name="FirstDigit" id="FirstDigit" placeholder="First Digit" >
 	<br><br>
 	<input type="number" name="SecondDigit" id="SecondDigit" placeholder="Second Digit" >
