This is a testing commit

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Calculator</title>
+	<title>Calculator Page</title>
 	<script type="text/javascript" src="calc.js"></script>
 	<link rel="stylesheet" type="text/css" href="calc.css">
 </head>
